--- a/д:з_1.ipynb
+++ b/д:з_1.ipynb
@@ -2,34 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-172-2a121e1be848>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# определитель усталости\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'по шкале от 0 до 10, напишите, насколько Вы устали: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0.7\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Кажется, Вы совсем не устали'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "вам надо отдохнуть\n"
      ]
     }
    ],
    "source": [
     "# определитель усталости\n",
     "\n",
-    "a = float(input('по шкале от 0 до 10, напишите, насколько Вы устали: '))\n",
-    "if a < 0.7:\n",
-    "    print('Кажется, Вы совсем не устали')\n",
-    "elif 0.7 <= a <= 4.8:\n",
-    "    print('Вы немного устали')\n"
+    "#a = float(input('по шкале от 0 до 10, напишите, насколько Вы устали: '))\n",
+    "#if a < 0.7:\n",
+    "    #print('Кажется, Вы совсем не устали')\n",
+    "#elif 0.7 <= a <= 4.8:\n",
+    "    #print('Вы немного устали')\n",
+    "#elif 0.7 > a > 5.5:\n",
+    "    #print('вы устали')\n",
+    "#else:\n",
+    "    #print('вам надо отдохнуть')\n",
+    "          \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
    "hash": "2584292d777de5035d7c379c4e7c3bf6a5010b8e968d3cc6a248fb0518b53ab8"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,9 +204,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
